--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EeveelutionQuiz</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Eeveelution Quiz</title>
+    <meta name="description" content="Find out which Eevee evolution you are in this Pokemon personality quiz.">
+    <meta name="thumbnail" content="https://eeveequiz.com/assets/images/eeveelutions.png" />
+    <meta property="og:image" content="https://eeveequiz.com/assets/images/eeveelutions.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <meta property="og:title" content="Eeveelution Quiz" />
+    <meta property="og:url" content="eeveequiz.com" />
+    <meta property="og:description" content="Find out which Eevee evolution you are in this Pokemon personality quiz." />
+    <meta property="og:site_name" content="Eeveelution Quiz" />
+    <meta property="og:image" content="https://eeveequiz.com/assets/images/eeveelutions.png"/>
+    <meta property="og:image:width" content="1000" />
+    <meta property="og:image:height" content="1000" />
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@Maxwell_Dev">
+    <meta name="twitter:title" content="Eeveelution Quiz">
+    <meta name="twitter:description" content="Find out which Eevee evolution you are in this Pokemon personality quiz.">
+    <meta name="twitter:summary" content="Find out which Eevee evolution you are in this Pokemon personality quiz.">
+    <meta property="twitter:image" content="https://eeveequiz.com/assets/images/eeveelutions.png"/>
 
     {{content-for "head"}}
 
